@@ -9,6 +9,7 @@
     Subdirectory ~layouts~ contains preinstalled layouts. Customizable variable
     ~purpose-use-built-in-layouts~ controls if those layouts are available to
     the user (available by default).
+*** Added Purpose menu to the menu-bar
 ** Bug Fixes
 *** [[https://github.com/bmag/emacs-purpose/issues/79][#79]]: nil buffer means ~other-buffer~ for some buffer switching commands
     These commands are: ~purpose-switch-buffer~,
